--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<ul class="main-nav__list">
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--first main-nav__dropdown--active"><span>Игры</span>
 
-						<ul class="main-nav__dropdown main-nav__dropdown--first">
+						<ul class="main-nav__dropdown">
 							<li class="main-nav__dropdown-item"><a href="#">NetEnt</a></li>
 							<li class="main-nav__dropdown-item"><a href="#">Amatic</a></li>
 							<li class="main-nav__dropdown-item"><a href="#">Ezugi</a></li>
@@ -47,7 +47,7 @@
 
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--second"><span>Акции</span>
 
-						<ul class="main-nav__dropdown main-nav__dropdown--second">
+						<ul class="main-nav__dropdown">
 							<li class="main-nav__dropdown-item"><a href="bonus.html">Приветственный бонус</a></li>
 							<li class="main-nav__dropdown-item"><a href="#">Акция 2</a></li>
 							<li class="main-nav__dropdown-item"><a href="#">Акция 3</a></li>
@@ -58,7 +58,7 @@
 					<li class="main-nav__item main-nav__item--hider"><a href="partners.html">Партнёрам</a></li>
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--fifth"><span>О нас</span>
 
-						<ul class="main-nav__dropdown main-nav__dropdown--fifth">
+						<ul class="main-nav__dropdown">
 							<li class="main-nav__dropdown-item"><a href="#">О DarkSlot</a></li>
 							<li class="main-nav__dropdown-item"><a href="blog.html">Блог</a></li>
 						</ul>
@@ -130,11 +130,11 @@
 			<div class="tabs__wrapper">
 
 				<div class="switchers">
-					<div class="switchers__switcher switchers__switcher--first switchers__switcher--active"><div class="switchers__image switchers__image--first"></div>Лобби</div>
-					<div class="switchers__switcher switchers__switcher--second"><div class="switchers__image switchers__image--second"></div>Слоты</div>
-					<div class="switchers__switcher switchers__switcher--third"><div class="switchers__image switchers__image--third"></div>Джекпоты</div>
-					<div class="switchers__switcher switchers__switcher--fourth"><div class="switchers__image switchers__image--fourth"></div>Настольные</div>
-					<div class="switchers__switcher switchers__switcher--fifth"><div class="switchers__image switchers__image--fifth"></div>Live диллер</div>
+					<div class="switchers__switcher switchers__switcher--active"><div class="switchers__image switchers__image--first"></div>Лобби</div>
+					<div class="switchers__switcher"><div class="switchers__image switchers__image--second"></div>Слоты</div>
+					<div class="switchers__switcher"><div class="switchers__image switchers__image--third"></div>Джекпоты</div>
+					<div class="switchers__switcher"><div class="switchers__image switchers__image--fourth"></div>Настольные</div>
+					<div class="switchers__switcher"><div class="switchers__image switchers__image--fifth"></div>Live диллер</div>
 				</div>
 
 				<form action="#" class="tabs__select-form">
