--- a/404.html
+++ b/404.html
@@ -13,21 +13,23 @@
 <body>
 	
 	<section class="error">
-		<div class="error__wrapper">
-			<div class="error__character-wrapper">
-				<img src="img/brain-monster.png" alt="brain monster!" class="error__character">
-			</div>
+		<a href="index.html">
+			<div class="error__wrapper">
+				<div class="error__character-wrapper">
+					<img src="img/brain-monster.png" alt="brain monster!" class="error__character">
+				</div>
 
-			<div class="error-text">
-				<h1 class="error-text__header">Что-то пошло не так</h1>
-				<span class="error-text__bg-text">#УУУУПС</span>
-				<h2 class="error-text__underheader">Ты не должен здесь находиться.</h2>
-				<p class="error-text__bottom">Нажми на любое место сайта или кнопку Назад, чтобы вернуться в лобби.</p>
+				<div class="error-text">
+					<h1 class="error-text__header">Что-то пошло не так</h1>
+					<span class="error-text__bg-text">#УУУУПС</span>
+					<h2 class="error-text__underheader">Ты не должен здесь находиться.</h2>
+					<p class="error-text__bottom">Нажми на любое место сайта или кнопку Назад, чтобы вернуться в лобби.</p>
+				</div>
 			</div>
-		</div>
+		</a>
 	</section>
 
-	<!-- <div id="preloader"></div> -->
+	<div id="preloader"></div>
 
 	<script type="text/javascript">
 		var preloader = document.getElementById("preloader");
