--- a/index.html
+++ b/index.html
@@ -124,6 +124,23 @@
 					</div>
 				</div>
 			</div>
+
+			<div class="slide">
+				<div class="slide__image-wrapper">
+					<a href="#">
+						<img src="img/slide3.png" alt="slide" class="slide__image">
+					</a>
+				</div>
+			</div>
+
+			<div class="slide">
+				<div class="slide__image-wrapper">
+					<a href="#">
+						<img src="img/slide4.png" alt="slide" class="slide__image">
+					</a>
+				</div>
+			</div>
+
 		</section>
 
 		<section class="tabs">
@@ -250,6 +267,10 @@
 				<h2 class="jackpot__underheader">Общий джекпот</h2>
 				<button class="jackpot__button">Показать игры с джекпотом</button>
 				<span class="jackpot__background-text">#ничоси</span>
+
+				<div class="jackpot__image-wrapper">
+					<img src="img/viking.png" alt="Викинг" class="jackpot__image">
+				</div>
 			</div>
 		</section>
 
@@ -488,6 +509,17 @@
 
 		<form action="#" class="registration-form">
 			<h2 class="registration-form__header">Регистрация</h2>
+
+			<div class="social-enter social-enter--reg">
+				<span class="social-enter__text">Войти с помощью:</span>
+
+				<div class="social-enter__socials">
+					<button class="social-enter__soc social-enter__soc--fb"></button>
+					<button class="social-enter__soc social-enter__soc--vk"></button>
+					<button class="social-enter__soc social-enter__soc--tw"></button>
+				</div>
+			</div>
+
 			<input type="email" name="email" placeholder="Email" class="registration-form__name">
 			<input type="text" name="nickname" placeholder="Никнейм" class="registration-form__nickname">
 			<input type="password" name="password" placeholder="Пароль" class="registration-form__password">
@@ -524,6 +556,16 @@
 				<input type="email" class="enter-form__email" placeholder="Email">
 				<input type="password" class="enter-form__password" placeholder="Пароль">
 				<input type="button" class="enter-form__button" value="Войти">
+
+				<div class="social-enter">
+					<span class="social-enter__text">Войти с помощью:</span>
+
+					<div class="social-enter__socials">
+						<button class="social-enter__soc social-enter__soc--fb"></button>
+						<button class="social-enter__soc social-enter__soc--vk"></button>
+						<button class="social-enter__soc social-enter__soc--tw"></button>
+					</div>
+				</div>
 			</form>
 
 			<a href="#" class="modal-enter__forgot-pass">Я забыл пароль</a>
