--- a/bonus.html
+++ b/bonus.html
@@ -10,7 +10,6 @@
 	<link rel="stylesheet" href="css/slick.css">
 	<link rel="stylesheet" href="css/slick-theme.css">
 	<link rel="stylesheet" href="css/jquery.formstyler.css">
-	<link rel="stylesheet" href="css/jquery.formstyler.theme.css">
 </head>
 <body>
 	
@@ -215,7 +214,11 @@
 
 				<div class="games__social">
 					<span class="games__text">Следите за нами</span>
-					<div class="games__fake-social"></div>
+					<div class="games__social-list">
+						<a href="#" target="blank"><img src="img/social-icons/fb-big.png" alt=""></a>
+						<a href="#" target="blank"><img src="img/social-icons/tw-big.png" alt=""></a>
+						<a href="#" target="blank"><img src="img/social-icons/yt-big.png" alt=""></a>
+					</div>
 				</div>
 			</div>
 		</section>
@@ -230,7 +233,7 @@
 			<div class="footer__wrapper">
 				<div class="footer__copyright"></div>
 				<div class="footer__development">
-					<span class="footer__developer">Разработка сайта: </span> 
+					<span class="footer__developer">Дизайн сайта: </span> 
 					<a href="http://www.crepla.com/" target="blank"><img src="img/crepla-logo.png" alt="crepla" class="footer__crepla-logo"></a>
 				</div>
 			</div>
@@ -252,6 +255,7 @@
 			<div class="fixed-bar__chat"><p>Онлайн-чат</p></div>
 
 			<form action="#">
+				<img src="img/flag-russian.png" alt="ru">
 				<select name="language" id="language" class="fixed-bar__language">
 					<option value="russian">Русский</option>
 					<option value="not-russian">Не русский</option>
