slot of the day page

--- a/bonus.html
+++ b/bonus.html
@@ -38,7 +38,7 @@
 				<ul class="main-nav__list">
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--first"><span>Игры</span>
 
-						<ul class="main-nav__dropdown main-nav__dropdown--first">
+						<ul class="main-nav__dropdown">
 							<li class="main-nav__dropdown-item"><a href="#">NetEnt</a></li>
 							<li class="main-nav__dropdown-item"><a href="#">Amatic</a></li>
 							<li class="main-nav__dropdown-item"><a href="#">Ezugi</a></li>
@@ -48,10 +48,10 @@
 
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--second"><span>Акции</span>
 
-						<ul class="main-nav__dropdown main-nav__dropdown--second">
+						<ul class="main-nav__dropdown">
 							<li class="main-nav__dropdown-item"><a href="bonus.html">Приветственный бонус</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">Акция 2</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">Акция 3</a></li>
+							<li class="main-nav__dropdown-item"><a href="slot-of-day.html">Слот дня</a></li>
+							<li class="main-nav__dropdown-item"><a href="free-spins.html">Фриспины</a></li>
 						</ul>
 					</li>
 
@@ -59,7 +59,7 @@
 					<li class="main-nav__item main-nav__item--hider"><a href="partners.html">Партнёрам</a></li>
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--fifth"><span>О нас</span>
 
-						<ul class="main-nav__dropdown main-nav__dropdown--fifth">
+						<ul class="main-nav__dropdown">
 							<li class="main-nav__dropdown-item"><a href="#">О DarkSlot</a></li>
 							<li class="main-nav__dropdown-item"><a href="blog.html">Блог</a></li>
 						</ul>
@@ -434,7 +434,7 @@
 	<script type="text/javascript" src="js/jquery.formstyler.min.js"></script>
 
 	<script type="text/javascript">
-		$('.registration-form-mini__select, .registration-form__currency').styler();
+		$('select').styler();
 	</script>
 
 </body>
