--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
 						<ul class="main-nav__dropdown">
 							<li class="main-nav__dropdown-item"><a href="bonus.html">Приветственный бонус</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">Акция 2</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">Акция 3</a></li>
+							<li class="main-nav__dropdown-item"><a href="slot-of-day.html">Слот дня</a></li>
+							<li class="main-nav__dropdown-item"><a href="free-spins.html">Фриспины</a></li>
 						</ul>
 					</li>
 
