slot-of-day -> day-slot

--- a/day-slot.html
+++ b/day-slot.html
@@ -50,7 +50,7 @@
 
 						<ul class="main-nav__dropdown">
 							<li class="main-nav__dropdown-item"><a href="bonus.html">Приветственный бонус</a></li>
-							<li class="main-nav__dropdown-item"><a href="slot-of-day.html">Слот дня</a></li>
+							<li class="main-nav__dropdown-item"><a href="day-slot.html">Слот дня</a></li>
 							<li class="main-nav__dropdown-item"><a href="free-spins.html">Фриспины</a></li>
 						</ul>
 					</li>
@@ -77,12 +77,12 @@
 
 	<div class="main-wrapper">
 
-		<div class="slot-of-day-image">
-			<img src="img/slot-of-day.png" alt="slot of day" class="slot-of-day-image__inner">
+		<div class="day-slot-image">
+			<img src="img/day-slot.png" alt="slot of day" class="day-slot-image__inner">
 		</div>
 
-		<section class="slot-of-day">
-			<div class="slot-of-day__wrapper">
+		<section class="day-slot">
+			<div class="day-slot__wrapper">
 				<div class="half-cashback">
 
 					<div class="half-cashback__text-wrapper">
