--- a/bonus.html
+++ b/bonus.html
@@ -50,7 +50,7 @@
 
 						<ul class="main-nav__dropdown">
 							<li class="main-nav__dropdown-item"><a href="bonus.html">Приветственный бонус</a></li>
-							<li class="main-nav__dropdown-item"><a href="slot-of-day.html">Слот дня</a></li>
+							<li class="main-nav__dropdown-item"><a href="day-slot.html">Слот дня</a></li>
 							<li class="main-nav__dropdown-item"><a href="free-spins.html">Фриспины</a></li>
 						</ul>
 					</li>
