free spins page

--- a/free-spins.html
+++ b/free-spins.html
@@ -77,6 +77,54 @@
 
 	<div class="main-wrapper">
 
+		<div class="free-spins-image">
+			<img src="img/free-spins.png" alt="slot of day" class="free-spins-image__inner">
+		</div>
+
+		<section class="free-spins">
+			<div class="free-spins__wrapper">
+				<div class="free-spins__header-wrapper">
+					<h2 class="free-spins__header">Бонусные фриспины по понедельникам</h2>
+					<p class="free-spins__underheader-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+				</div>
+
+				<div class="free-spins__coin-image-wrapper">
+					<img src="img/free-spins-coin.png" alt="free spins" class="free-spins__coin-image">
+				</div>
+			</div>
+		</section>
+
+		<section class="statistics">
+			<div class="statistics__wrapper">
+				<div class="statistics__columns-wrapper">
+					<div class="statistics__column">
+						<span class="statistics__number">20</span>
+						<span class="statistics__col-text">Lorem ipsum dolor sit amet, consecte</span>
+					</div>
+					<div class="statistics__column">
+						<span class="statistics__number">20</span>
+						<span class="statistics__col-text">Lorem ipsum dolor sit amet, consecte</span>
+					</div>
+					<div class="statistics__column">
+						<span class="statistics__number">20</span>
+						<span class="statistics__col-text">Lorem ipsum dolor sit amet, consecte</span>
+					</div>
+					<div class="statistics__column">
+						<span class="statistics__number">20</span>
+						<span class="statistics__col-text">Lorem ipsum dolor sit amet, consecte</span>
+					</div>
+				</div>
+				
+				<div class="statistics__button-wrapper">
+					<button class="statistics__button">Регистрация</button>
+				</div>
+
+				<div class="statistics__text-wrapper">
+					<p class="statistics__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>
+			</div>
+		</section>
+
 		<section class="registration">
 			<div class="registration__wrapper">
 
