--- a/index.html
+++ b/index.html
@@ -122,16 +122,20 @@
 				</div>
 				<div class="slide__wrapper">
 					<div class="slide__text">
-						<button class="slide__button">Подробнее</button>
+						<a href="bonus.html" class="slide__button">Подробнее</a>
 					</div>
 				</div>
 			</div>
 
 			<div class="slide">
 				<div class="slide__image-wrapper">
-					<a href="slot-of-day.html">
-						<img src="img/slot-of-day.png" alt="slide" class="slide__image">
+					<a href="day-slot.html">
+						<img src="img/day-slot.png" alt="slide" class="slide__image">
 					</a>
+				</div>
+
+				<div class="slide__button-wrapper">
+					<a href="day-slot.html" class="slide__button">Подробнее</a>
 				</div>
 			</div> 
 
@@ -186,6 +190,10 @@
 					<a href="free-spins.html">
 						<img src="img/free-spins.png" alt="slide" class="slide__image">
 					</a>
+				</div>
+
+				<div class="slide__button-wrapper">
+					<a href="free-spins.html" class="slide__button">Подробнее</a>
 				</div>
 			</div>
 		</section>
