bgs, text for free spins

--- a/free-spins.html
+++ b/free-spins.html
@@ -84,8 +84,8 @@
 		<section class="free-spins">
 			<div class="free-spins__wrapper">
 				<div class="free-spins__header-wrapper">
-					<h2 class="free-spins__header">Бонусные фриспины по понедельникам</h2>
-					<p class="free-spins__underheader-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+					<h2 class="free-spins__header">Бонусные фриспины по четвергам</h2>
+					<p class="free-spins__underheader-text">Сделайте депозит в четверг, введите промо-код полученный на почту и крутите любимые игры абсолютно бесплатно!</p>
 				</div>
 
 				<div class="free-spins__coin-image-wrapper">
@@ -99,19 +99,19 @@
 				<div class="statistics__columns-wrapper">
 					<div class="statistics__column">
 						<span class="statistics__number">20</span>
-						<span class="statistics__col-text">Lorem ipsum dolor sit amet, consecte</span>
+						<span class="statistics__col-text">и ниже спинов на депозит 20$ (1000 р.)</span>
 					</div>
 					<div class="statistics__column">
-						<span class="statistics__number">20</span>
-						<span class="statistics__col-text">Lorem ipsum dolor sit amet, consecte</span>
+						<span class="statistics__number">50</span>
+						<span class="statistics__col-text">спинов на депозит 50$ (2500р)</span>
 					</div>
 					<div class="statistics__column">
-						<span class="statistics__number">20</span>
-						<span class="statistics__col-text">Lorem ipsum dolor sit amet, consecte</span>
+						<span class="statistics__number">100</span>
+						<span class="statistics__col-text">спинов на депозит 100$ (5000р)</span>
 					</div>
 					<div class="statistics__column">
-						<span class="statistics__number">20</span>
-						<span class="statistics__col-text">Lorem ipsum dolor sit amet, consecte</span>
+						<span class="statistics__number">250</span>
+						<span class="statistics__col-text">спинов на депозит от 200$ (10000р)</span>
 					</div>
 				</div>
 				
