--- a/index.html
+++ b/index.html
@@ -428,8 +428,8 @@
 
 		<section class="deposites">
 			<div class="deposites__wrapper">
-				<h1 class="deposites__header">Заработай 40% с депозитов<br>вместе с Darkslot<br>и 1000$ сверху</h1>
-				<button class="deposites__button">Узнать больше</button>
+				<h1 class="deposites__header">Заработай 45% с депозитов<br>вместе с Darkslot<br>и 1000$ сверху</h1>
+				<a href="partners.html" class="deposites__button">Узнать больше</a>
 
 				<div class="deposites__image-wrapper">
 					<img src="img/chest.png" alt="chest" class="deposites__image">
