--- a/free-spins.html
+++ b/free-spins.html
@@ -99,7 +99,7 @@
 				<div class="statistics__columns-wrapper">
 					<div class="statistics__column">
 						<span class="statistics__number">20</span>
-						<span class="statistics__col-text">и ниже спинов на депозит 20$ (1000 р.)</span>
+						<span class="statistics__col-text">спинов на депозит 20$ (1000 р.)</span>
 					</div>
 					<div class="statistics__column">
 						<span class="statistics__number">50</span>
