--- a/blog.html
+++ b/blog.html
@@ -50,18 +50,22 @@
 
 						<ul class="main-nav__dropdown">
 							<li class="main-nav__dropdown-item"><a href="bonus.html">Приветственный бонус</a></li>
-							<li class="main-nav__dropdown-item"><a href="day-slot.html">Слот дня</a></li>
-							<li class="main-nav__dropdown-item"><a href="free-spins.html">Фриспины</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Reload бонус</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">100% кэшбек</a></li>
+							<li class="main-nav__dropdown-item"><a href="day-slot.html">Слот дня во вторник</a></li>
+							<li class="main-nav__dropdown-item"><a href="free-spins.html">Фриспины в четверг</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Darkslot турнир</a></li>
 						</ul>
 					</li>
 
 					<li class="main-nav__item main-nav__item--hider"><span id="menu-support">Поддержка</span></li>
-					<li class="main-nav__item main-nav__item--hider"><a href="partners.html">Партнёрам</a></li>
+					<li class="main-nav__item main-nav__item--hider"><a href="partners.html">Партнерам</a></li>
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--fifth"><span>О нас</span>
 
 						<ul class="main-nav__dropdown">
 							<li class="main-nav__dropdown-item"><a href="#">О DarkSlot</a></li>
 							<li class="main-nav__dropdown-item"><a href="blog.html">Блог</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Правила и условия</a></li>
 						</ul>
 
 					</li>
@@ -74,6 +78,7 @@
 			</div>
 		</div>
 	</header>
+
 
 	<div class="main-wrapper">
 
@@ -220,53 +225,32 @@
 					<div class="games__column">
 						<h2 class="games__header">Игры</h2>
 						<ul class="games__list">
-							<li class="games__item"><a href="#">Игры</a></li>
-							<li class="games__item"><a href="#">Слоты</a></li>
-							<li class="games__item"><a href="#">Игры с джекпотом</a></li>
-							<li class="games__item"><a href="#">Настольные игры</a></li>
-							<li class="games__item"><a href="#">Рулетка</a></li>
-							<li class="games__item"><a href="#">Блэкджек</a></li>
-							<li class="games__item"><a href="#">Живое казино</a></li>
+							<li class="games__item"><a href="#">NetEnt</a></li>
+							<li class="games__item"><a href="#">Amatic</a></li>
+							<li class="games__item"><a href="#">Ezugi</a></li>
+							<li class="games__item"><a href="#">Softswiss</a></li>
 						</ul>
 					</div>
 
 					<div class="games__column">
-						<h2 class="games__header">Игры</h2>
+						<h2 class="games__header">Акции</h2>
 						<ul class="games__list">
-							<li class="games__item"><a href="#">Игры</a></li>
-							<li class="games__item"><a href="#">Слоты</a></li>
-							<li class="games__item"><a href="#">Игры с джекпотом</a></li>
-							<li class="games__item"><a href="#">Настольные игры</a></li>
-							<li class="games__item"><a href="#">Рулетка</a></li>
-							<li class="games__item"><a href="#">Блэкджек</a></li>
-							<li class="games__item"><a href="#">Живое казино</a></li>
+							<li class="games__item"><a href="bonus.html">Приветственный бонус</a></li>
+							<li class="games__item"><a href="#">Reload бонус</a></li>
+							<li class="games__item"><a href="#">100% Кэшбек</a></li>
+							<li class="games__item"><a href="day-slot.html">Слот дня во вторник</a></li>
+							<li class="games__item"><a href="free-spins.html">Фриспины в четверг</a></li>
+							<li class="games__item"><a href="#">Darkslot турнир</a></li>
 						</ul>
 					</div>
 
 					<div class="games__column">
-						<h2 class="games__header">Игры</h2>
+						<h2 class="games__header">О нас</h2>
 						<ul class="games__list">
-							<li class="games__item"><a href="#">Игры</a></li>
-							<li class="games__item"><a href="#">Слоты</a></li>
-							<li class="games__item"><a href="#">Игры с джекпотом</a></li>
-							<li class="games__item"><a href="#">Настольные игры</a></li>
-							<li class="games__item"><a href="#">Рулетка</a></li>
-							<li class="games__item"><a href="#">Блэкджек</a></li>
-							<li class="games__item"><a href="#">Живое казино</a></li>
-						</ul>
-					</div>
-
-
-					<div class="games__column">
-						<h2 class="games__header">Игры</h2>
-						<ul class="games__list">
-							<li class="games__item"><a href="#">Игры</a></li>
-							<li class="games__item"><a href="#">Слоты</a></li>
-							<li class="games__item"><a href="#">Игры с джекпотом</a></li>
-							<li class="games__item"><a href="#">Настольные игры</a></li>
-							<li class="games__item"><a href="#">Рулетка</a></li>
-							<li class="games__item"><a href="#">Блэкджек</a></li>
-							<li class="games__item"><a href="#">Живое казино</a></li>
+							<li class="games__item"><a href="#">Поддержка</a></li>
+							<li class="games__item"><a href="#">Партнерам</a></li>
+							<li class="games__item"><a href="#">О Dsrkslot</a></li>
+							<li class="games__item"><a href="#">Блог</a></li>
 						</ul>
 					</div>
 				</div>
