--- a/index.html
+++ b/index.html
@@ -91,9 +91,10 @@
 					<div class="slide__form-wrapper">
 
 						<div class="slide-bonus">
-							<span class="slide-bonus__first-line">20</span>
-							<span class="slide-bonus__second-line">фриспинов</span>
+							<span class="slide-bonus__first-line">10$</span>
+							<span class="slide-bonus__second-line">без депозита</span>
 							<span class="slide-bonus__third-line">- за регистрацию -</span>
+							<a href="#" class="slide-bonus__link">Подробнее</a>
 						</div>
 
 						<form action="#" class="registration-form-mini">
@@ -124,8 +125,11 @@
 				<div class="slide__image-wrapper">
 					<img src="img/slide-image.png" alt="slide" class="slide__image">
 				</div>
+
 				<div class="slide__wrapper">
 					<div class="slide__text">
+						<span class="slide__upper-text">Розыгрыш каждую неделю</span>
+						<h1 class="slide__header">100% кэшбек</h1>
 						<a href="bonus.html" class="slide__button">Подробнее</a>
 					</div>
 				</div>
@@ -139,7 +143,7 @@
 				</div>
 
 				<div class="slide__button-wrapper">
-					<a href="day-slot.html" class="slide__button">Подробнее</a>
+					<a href="day-slot.html" class="slide__button slide__button--centered">Подробнее</a>
 				</div>
 			</div> 
 
@@ -197,7 +201,7 @@
 				</div>
 
 				<div class="slide__button-wrapper">
-					<a href="free-spins.html" class="slide__button">Подробнее</a>
+					<a href="free-spins.html" class="slide__button slide__button--centered">Подробнее</a>
 				</div>
 			</div>
 		</section>
